# ManaClaw

entry/src/main/cangjie/: CommandBuilder.cj  RemoteCommandTaskGateway.cj  SshClient.cj  TaskCore.cj
entry/src/main/cangjie/ark_interop_api/: ark_interop_api.d.ts
entry/src/main/cpp/: CMakeLists.txt  cc_ssh.c  cc_ssh.h
